# RS485_Project

./: .gitignore  .mxproject  AGENTS.md  CLAUDE.md  CMakeLists.txt  CUBEMX_settings.md  PROJECT_REQUIREMENTS.md  README.md  STM32F429XX_FLASH.ld  myproject.ioc  session-note.txt
.claude/: settings.local.json
APP/Inc/: app_alarm.h  app_alarm_config.h  app_backlight.h  app_cmd.h  app_config.h  app_display.h  app_esp32.h  app_event_log.h  app_health.h  app_log_storage.h  app_main.h  app_monitor.h  app_mqtt_cmd.h  app_sensor.h  app_sensor_config.h  app_touch.h  app_types.h  app_ui_text.h  app_upload.h
APP/Src/: app_alarm.c  app_backlight.c  app_cmd.c  app_config.c  app_display.c  app_esp32.c  app_event_log.c  app_health.c  app_log_storage.c  app_main.c  app_monitor.c  app_mqtt_cmd.c  app_sensor.c  app_touch.c  app_ui_text.c  app_upload.c
BSP/Inc/: bsp_adc.h  bsp_beep.h  bsp_esp32.h  bsp_flash.h  bsp_key.h  bsp_lcd.h  bsp_led.h  bsp_log.h  bsp_rs485.h  bsp_spi_bus.h  bsp_touch.h  bsp_w25q64.h  bsp_watchdog.h
BSP/Src/: bsp_adc.c  bsp_beep.c  bsp_esp32.c  bsp_flash.c  bsp_key.c  bsp_lcd.c  bsp_led.c  bsp_log.c  bsp_rs485.c  bsp_spi_bus.c  bsp_touch.c  bsp_w25q64.c  bsp_watchdog.c
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  spi.c  stm32f4xx_it.c  usart.c
LVGL/: lv_conf.h
LVGL/porting/: lv_port_indev.c  lv_port_lcd_stm32.c  lv_port_lcd_stm32.h
simulator/: CMakeLists.txt  README.md  lv_conf_sim.h  main_sim.c  sim_app_state.c  sim_app_state.h  sim_dashboard.c  sim_dashboard.h
(+2281 files in other folders)
